@@ -51,6 +51,6 @@ usage(FILE *f)
         fprintf(f, "   \'%%T\': \'type\' (d, l or -: dir, link or file)\n");
         fprintf(f, "   \'%%C\': file contents\n");
         fprintf(f, "\nReport bugs to <miek@miek.nl>\n");
-        fprintf(f, "Licensed under the GPL. See the file LICENSE in the\n");
+        fprintf(f, "Licensed under the GPL.\nSee the file LICENSE in the ");
         fprintf(f, "source distribution of rdup.\n");
 }
